@@ -1,0 +1,3 @@
+module main;
+  assert final (0);
+endmodule
